--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,10 +19,13 @@
     "C_Cpp.default.compilerPath": "/home/jjsch/.espressif/tools/riscv32-esp-elf/1.24.0.123_64eb9ff-8.4.0/riscv32-esp-elf",
     "cmake.configureOnOpen": true,
     "idf.flashType": "UART",
-    "idf.port": "/dev/ttyUSB2",
+    "idf.port": "/dev/tty.usbmodem113101",
     "files.associations": {
         "*.tcc": "c",
         "ws2812_led.h": "c"
     },
-    "idf.adapterTargetName": "esp32c3"
+    "idf.adapterTargetName": "esp32c3",
+    "idf.openOcdConfigs": [
+        "board/esp32c3-builtin.cfg"
+    ]
 }
